# treppe2000

./: .gitignore  Makefile  artnetd.py  main.c  play_image.py  play_png.py  preview.py  render.py  script.lua  shaders.py  shell.nix  trepped.py
doc/: README.md
install/systemd/: treppe-powerd.service  trepped.service
powerd/: powerd.py  requirements.txt
powerd/stub/: gpio_off.sh  gpio_on.sh
prtcl/: particle.py  programs.py  sim.py  space.py
python_artnet/: LICENSE  README.md  pyproject.toml
python_artnet/.github/workflows/: publishToPypi.yml
python_artnet/python_artnet/: __init__.py  python_artnet.py
python_artnet/samples/: exampleReceiver.py
shaders/: functions.py  generators.py  oscillators.py  procs.py  state.py
treppe/: olsndot.py  olsndots.py  protocol.py  protocol_test.py
